@@ -14,7 +14,7 @@ class Question:
 		self.type = pType
 
 
-def reset_quiz(input, output):
+def reset_quiz(input, output, post):
 	qtype = []
 
 	with open(input, "rt") as fin:
@@ -27,18 +27,46 @@ def reset_quiz(input, output):
 
 	i = 0
 	j = 0
+	string = 'Question '
 	with open(output, "wt") as fout:
 		for line in qtype:
 			for ans in qtype[i]:
+				string += str(i+1)
 				if j % 2 != 0 and qtype[i][j] == 'Correct':
 					qtype[i][j] = 'Incorrect'
+
+				if qtype[i][0] == 'TF':
+
+					if qtype[i][2] == 'True':
+						qtype[i][2] = 'False'
+					else:
+						qtype[i][2] = 'True'
+
+				if string in post:
+					if qtype[i][0] == 'MC':
+						qtype[i][qtype[i].index(post[string])+1] = 'Correct'
+
+					elif qtype[i][0] == 'SR' or qtype[i][0] == 'TF' or qtype[i][0] == 'ESS':
+						qtype[i][2] = post[string]
+
+					elif qtype[i][0] == 'MA':
+						for answer in qtype[i][2:]:
+							if answer in post.getlist(string):
+								qtype[i][qtype[i].index(answer)+1] = 'Correct'
+
+					elif qtype[i][0] == 'FIB':
+						for answer in qtype[i][2:]:
+							qtype[i][2] = post[string]
+
+
+				string = 'Question '
 				j += 1
 			j = 0
 			fout.write('\t'.join(qtype[i]))
 			fout.write('\n')
 			i += 1
 		fout.close()
-	return qtype
+
 
 def create_quiz(input):
 
@@ -100,13 +128,11 @@ def grade_quiz(input, key):
 		read1 = (line for line in read1 if line)  # ignore blank lines
 		for ques in read1:
 			first.append(ques)
-
 	with open(input, "r") as f2:
 		read2 = csv.reader(f2, delimiter='\t')  # parse by tab
 		read2 = (line for line in read2 if line)  # ignore blank lines
 		for questy in read2:
 			second.append(questy)
-			print(questy)
 	i = 0
 	correct = 0
 	while i < len(first):
